--- a/WebContent/listEgressQuarantine.zul
+++ b/WebContent/listEgressQuarantine.zul
@@ -31,22 +31,39 @@
                                                 <toolbarbutton label="${c:l('sp.crud.product.detail.quarantine')}" />
                                             </hlayout>
                                         </div>
-                                        <div height="5px" width="100%" style="background:#333;" align="left"></div>
+ <div height="5px" width="100%" style="background:#333;" align="left"></div>
                                         <div>
+                                            <!--Filters for Searching-->
+                                            <vlayout>
+                                                <hlayout style="text-align:right">
+                                                    <label value="${c:l('sp.common.alias')}" width="80px" sclass="lblbold"/>
+                                                    <textbox id="txtAlias" value="" width="150px" tooltiptext="${c:l('sp.common.searching.filter')}"/>
+                                                </hlayout>
 
+                                                <hlayout>
+                                                    <!--Add button-->
+                                                    <div align="left" width="495px">
+                                                    </div>
+                                                    <!--Filters button-->
+                                                    <div align="right" width="400px">
+                                                        <button id="btnSearch" label="${c:l('sp.common.actions.search')}" width="80px" class="open orange" tooltiptext="${c:l('sp.common.actions.search.filter.tooltip')}"/>
+                                                        <button id="btnClear" label="${c:l('sp.common.actions.cancel')}"  width="80px" class="open gray" tooltiptext="${c:l('sp.common.actions.cancel.filter.tooltip')}"/>
+                                                    </div>
+                                                </hlayout>
+
+                                            </vlayout>
                                             <separator/>
-                                            <!--Record Listbox-->
                                             <listbox id="lbxRecords" fixedLayout="true" width="895px" height="530px">
                                                 <listhead>
-                                                    <listheader label="${c:l('sp.common.PartNumber')}" width="135px" sort="auto"/>
-                                                    <listheader label="${c:l('sp.common.descripton')}" width="240px" sort="auto"/>
+                                                    <listheader label="${c:l('sp.common.PartNumber')}" width="125px" sort="auto"/>
+                                                    <listheader label="${c:l('sp.common.descripton')}" width="220px" sort="auto"/>
                                                      <listheader label="${c:l('sp.common.provider')}" width="110px" sort="auto"/>
                                                     <listheader label="${c:l('sp.common.serial')}" width="95px" sort="auto"/>
-                                                    <listheader label="${c:l('sp.common.stock')}" width="95px" sort="auto"/>
+                                                    <listheader label="${c:l('sp.common.stock')}" width="80px" sort="auto"/>
                                                     <listheader label="${c:l('sp.common.creationDate')}" width="120px" sort="auto"/>
-                                                    <listheader label="-" width="45px"/>
-                                                    <listheader label="-" width="45px"/>
-                                                    <listheader label="-" width="45px"/>
+                                                    <listheader label="-" width="45px" align="center"/>
+                                                    <listheader label="-" width="45px" align="center"/>
+                                                    <listheader label="-" width="45px" align="center"/>
                                                 </listhead>
                                             </listbox>
                                             
